<resources>
    <string name="app_name">Basic Application</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="priority">Priority</string>

    <string name="add_note">Add Note</string>
    <string name="save_note">Save Note</string>
    <string name="delete_note">Delete Note</string>

    <string name="error_no_title">Title is not set</string>
    <string name="error_no_description">Description is not set</string>
    <string name="error_priority_not_set">Priority is not set</string>

    <!--  Placeholders  -->
    <string name="placeholder_note_title">Note Title</string>
    <string name="placeholder_note_priority">IMPORTANT</string>
    <string name="placeholder_note_description">This is my first note</string>

    <!--  Content Descriptors  -->
    <string name="cont_desc_add_note">Click to add note</string>
    <string name="cont_desc_edit_note">Click to edit note</string>
    <string name="cont_desc_delete_note">Click to delete note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>