<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <TextView
            android:id="@+id/tv_note_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_note_title"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/tv_note_priority"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_note_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_note_priority"
            android:fontFamily="casual"
            app:layout_constraintBottom_toBottomOf="@id/tv_note_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_note_title" />

        <TextView
            android:id="@+id/tv_note_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="serif"
            android:maxLines="3"
            android:paddingHorizontal="4dp"
            android:text="@string/placeholder_note_description"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_note_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>