<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.noteeditor.NoteEditor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_note"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:layout_margin="4dp"
            android:contentDescription="@string/cont_desc_add_note"
            android:src="@drawable/illus_note"
            app:layout_constraintBottom_toTopOf="@id/cl_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/bt_save_note"
            app:layout_constraintTop_toBottomOf="@id/iv_note">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_title"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/title"
                    android:importantForAutofill="no"
                    android:inputType="textAutoCorrect"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/description"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:maxLines="4" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_priority"
                android:layout_width="250dp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_description">

                <AutoCompleteTextView
                    android:id="@+id/actv_priority"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/priority"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/bt_save_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_note"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>